# Object_Detection

./: MQTT.py  Notes.docx  Paper.odt  Pytorch_export_to_onnx.py  Useful_Links  configuration.json  cuda_test  logreg_iris.onnx  main.py  sensor_fusion.py
Images/: MNIST_onnx.py  Mask_RCNN_Test.py  ModelLoader.py  PostProcessor.py  backup.py  object_detect.py  onnx_test.py  onnx_tut.py  train_CNN.py  watershed_segmentation.py
RGBD/: Preprocessor.py  RGBD_Visualize.py  data.json  input.txt  main.py  raw_data.txt  raw_data2.txt  raw_data_test.txt
camera_OD/: docker.dockerfile  requirements.txt
camera_OD/app/: ModelLoader.py  PostProcessor.py  cam_object_detection.py  preprocess.py
config/: camera_config.json  lidar_config.json
docker_stuff/docker_onnx/: Dockerfile
docker_stuff/docker_onnx/app/: Mask_RCNN_Test.py  test.py
docker_stuff/dust/mqtt/: .gitignore  CMakeLists.txt  README.md
docker_stuff/dust/mqtt/example/: simple_publisher.cpp  simple_subscriber.cpp
docker_stuff/dust/mqtt/example/resources/: configuration.json
docker_stuff/dust/mqtt/src/: mqtt_factory.cpp  mqtt_factory.h  mqtt_module.cpp  mqtt_module.h  mqtt_transport.cpp  mqtt_transport.h
docker_stuff/dust/zmq/: CMakeLists.txt  README.md
docker_stuff/dust/zmq/example/: simple_publisher.cpp  simple_subscriber.cpp
docker_stuff/dust/zmq/src/: zmq_factory.cpp  zmq_factory.h  zmq_module.cpp  zmq_module.h  zmq_transport.cpp  zmq_transport.h
docker_stuff/images/app/: ModelLoader.py  PostProcessor.py
docker_stuff/lidar/: Dockerfile
lidar/: PostProcess_Clustering.py  PreProcessor.py  Processor_Clustering.py  bagread.py  cluster_data.py  clustering_test.py  distanceread.py  kdtree.py  lasertestje.py  lasertestje.py.save  lidar_cluster_data_boundingbox.py  lidar_files  notitie_lidar  postprocess_lidar.py  run_lidar.py
lidar/lidar_data/: boundingbox_cluster.py  notities_Tom  test1.bag  test3.bag
lidar/lidar_data/2020-12-03-17-26-18/: scan.csv
lidar/lidar_data/2020-12-03-17-51-23/: camera-color-camera_info.csv  camera-color-image_raw-compressed-parameter_descriptions.csv  camera-color-image_raw-compressed-parameter_updates.csv  camera-color-image_raw-compressed.csv  camera-color-image_raw-compressedDepth-parameter_descriptions.csv  camera-color-image_raw-compressedDepth-parameter_updates.csv  camera-color-image_raw-theora-parameter_descriptions.csv  camera-color-image_raw-theora-parameter_updates.csv  camera-color-image_raw-theora.csv  camera-depth-camera_info.csv  camera-depth-image_rect_raw-compressed-parameter_descriptions.csv  camera-depth-image_rect_raw-compressed-parameter_updates.csv  camera-depth-image_rect_raw-compressed.csv  camera-depth-image_rect_raw-compressedDepth-parameter_descriptions.csv  camera-depth-image_rect_raw-compressedDepth-parameter_updates.csv  camera-depth-image_rect_raw-theora-parameter_descriptions.csv  camera-depth-image_rect_raw-theora-parameter_updates.csv  camera-depth-image_rect_raw-theora.csv  camera-extrinsics-depth_to_color.csv  camera-rgb_camera-auto_exposure_roi-parameter_descriptions.csv  camera-rgb_camera-auto_exposure_roi-parameter_updates.csv  camera-rgb_camera-parameter_descriptions.csv  camera-rgb_camera-parameter_updates.csv  camera-stereo_module-auto_exposure_roi-parameter_descriptions.csv  camera-stereo_module-auto_exposure_roi-parameter_updates.csv  camera-stereo_module-parameter_descriptions.csv  camera-stereo_module-parameter_updates.csv  rosout.csv  rosout_agg.csv  tf_static.csv
lidar/lidar_data/2020-12-03-17-56-26/: camera-color-camera_info.csv  camera-color-image_raw-compressed-parameter_descriptions.csv  camera-color-image_raw-compressed-parameter_updates.csv  camera-color-image_raw-compressed.csv  camera-color-image_raw-compressedDepth-parameter_descriptions.csv  camera-color-image_raw-compressedDepth-parameter_updates.csv  camera-color-image_raw-theora-parameter_descriptions.csv  camera-color-image_raw-theora-parameter_updates.csv  camera-color-image_raw-theora.csv  camera-depth-camera_info.csv  camera-depth-image_rect_raw-compressed-parameter_descriptions.csv  (+20 more)
models/: .~lock.Model.onnx#
modules/: libdust.so.2.0.0  libdust.so.2.1.0
notities_besprekingen/: bespreking_10_dec  bespreking_10_nov  bespreking_14_december  bespreking_16_nov  bespreking_17_dec  bespreking_19_nov  bespreking_26_nov  bespreking_30_nov  bespreking_3_dec  bespreking_7_dec
output/: model.onnx  model.pt
(+31 files in other folders)
